--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,6 +4,7 @@ html {
   font: 112.5%/1.45em georgia, serif, sans-serif;
   box-sizing: border-box;
   overflow-y: scroll;
+  background: linear-gradient(75deg, #331f78, #87f342);
 }
 body {
   margin: 0;
@@ -33,6 +34,9 @@ section,
 summary {
   display: block;
 }
+footer {
+  text-align: center;
+}
 audio,
 canvas,
 progress,
@@ -53,10 +57,12 @@ template {
 a {
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  color: inherit;
 }
 a:active,
 a:hover {
   outline-width: 0;
+  color: white;
 }
 abbr[title] {
   border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
